# remla24-team-11

./: .gitignore  ACTIVITY.md  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py
models/: .gitignore
operation/: ACTIVITY.md
src/data/: make_dataset.py
src/models/: evaluation.py  train_model.py
